@@ -6,6 +6,6 @@ DIST makemkv_v1.6.9_bin.tar.gz 5708674 RMD160 94dca9de41e24b48416f6160757fcb5c06
 DIST makemkv_v1.6.9_oss.tar.gz 434904 RMD160 da7ce6973054592f880d590960f8b9b9d90fef29 SHA1 7a8ce0669cc1d8b96dcb1a83c70876dd6504933f SHA256 45cc17c6661f3e297909cfcfc98e5fc4730cb5b468b70b1a33ac594eb1f75b2f
 EBUILD makemkv-1.5.6.ebuild 1552 RMD160 07b675536e68a590d72acc55ebbbd1298f6abde0 SHA1 4d8f6b4bc67e0eddc7b41cb26e0de26ee7b140f7 SHA256 2de1cc2d7eebaee5c01699547c3914d8ee1b5fb217006ca08a8691f0ca8da861
 EBUILD makemkv-1.5.8.ebuild 1532 RMD160 14b3d11a5887d1fb1c6fabb400a864a14c283bac SHA1 ab16bc981603750a0933cb6d706fe0437b959105 SHA256 578deec43ee48fc38c51d5921ac79045cc77d66b4c0b290b4c8bfac6be6a0adf
-EBUILD makemkv-1.6.9.ebuild 1531 RMD160 e63c14548290e57c9f9f5d5859008e64d4b1763b SHA1 3072e0e0c1556ac30f1e52a6cf7017537fb62621 SHA256 ad2a2dd1b8841d8471b61fdb2eac6f3664dabf18dcdce72922bf8242ed69c030
-MISC ChangeLog 236 RMD160 0b4c04dd4bce06afe2d3911096a2e97b0a4911ee SHA1 8c6fb41d27abb0fce081878fa3ae799986e527c0 SHA256 19476dcf4e0a9daca97c14bc3e96507fd698b6a446aa47074031167f7d7c46b1
+EBUILD makemkv-1.6.9.ebuild 1581 RMD160 70fdd8476bd18b3932b0d14545d46680ecd5336b SHA1 53bd284b4f749a43b1ab3550e98817a110f57659 SHA256 ed1eac76287d6df7983477afce7ff32c060b57efd2d0b3cf7e7d58d4c1421ec4
+MISC ChangeLog 321 RMD160 1600326c6a3afe77cd15c5a65a04d76eaeaa4223 SHA1 c10c967eb5aac711d0a42bd2b9554209202b4477 SHA256 ef337d5dabec87b96830bbf8f02ef40670f124466b95d18e29f4492c1ac8cf59
 MISC metadata.xml 224 RMD160 71a1b9f875b9de0f7a9f0dd00557874d936c5021 SHA1 2bca68cdbca3845abaaa36497a91b789eb1a89d0 SHA256 98cfdec9b1c16d801783412e122d81d3a42627c9b9595f5f8d0d8bf5ecb33e32
