@@ -1,6 +1,9 @@
 # ChangeLog for media-video/makemkv
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  09 Jun 2011; Steve Dibb <beandog@gentoo.org> makemkv-1.6.9.ebuild:
+  Version bump
 
 *makemkv-1.5.8 (23 Aug 2010)
 
